docs-archive/apache-airflow-providers-common-ai/0.7.0/_sources/_api/airflow/providers/common/ai/toolsets/datafusion/index.rst.txt
airflow.providers.common.ai.toolsets.datafusion
===============================================

.. py:module:: airflow.providers.common.ai.toolsets.datafusion

.. autoapi-nested-parse::

   Curated SQL toolset wrapping DataFusionEngine for agentic object-store workflows.



Attributes
----------

.. autoapisummary::

   airflow.providers.common.ai.toolsets.datafusion.log


Classes
-------

.. autoapisummary::

   airflow.providers.common.ai.toolsets.datafusion.DataFusionToolset


Module Contents
---------------

.. py:data:: log

.. py:class:: DataFusionToolset(datasource_configs, *, allow_writes = False, max_rows = 50)

   Bases: :py:obj:`pydantic_ai.toolsets.abstract.AbstractToolset`\ [\ :py:obj:`Any`\ ]


   Curated toolset that gives an LLM agent SQL access to object-storage data via Apache DataFusion.

   Provides three tools — ``list_tables``, ``get_schema``, and ``query`` —
   backed by
   :class:`~airflow.providers.common.sql.datafusion.engine.DataFusionEngine`.

   Each :class:`~airflow.providers.common.sql.config.DataSourceConfig` entry
   registers a table backed by Parquet, CSV, Avro, or Iceberg data on S3 or
   local storage. Multiple configs can be registered so that SQL queries can
   join across tables.

   Requires the ``datafusion`` extra of ``apache-airflow-providers-common-sql``.

   :param datasource_configs: One or more DataFusion data-source configurations.
   :param allow_writes: Allow data-modifying SQL (CREATE TABLE, CREATE VIEW,
       INSERT INTO, etc.). Default ``False`` — only SELECT-family statements
       are permitted.
   :param max_rows: Maximum number of rows returned from the ``query`` tool.
       Default ``50``.


   .. py:property:: id
      :type: str


      An ID for the toolset that is unique among all toolsets registered with the same agent.

      If you're implementing a concrete implementation that users can instantiate more than once, you should let them optionally pass a custom ID to the constructor and return that here.

      A toolset needs to have an ID in order to be used in a durable execution environment like Temporal, in which case the ID will be used to identify the toolset's activities within the workflow.



   .. py:method:: get_tools(ctx)
      :async:


      The tools that are available in this toolset.



   .. py:method:: call_tool(name, tool_args, ctx, tool)
      :async:


      Call a tool with the given arguments.

      Args:
          name: The name of the tool to call.
          tool_args: The arguments to pass to the tool.
          ctx: The run context.
          tool: The tool definition returned by [`get_tools`][pydantic_ai.toolsets.AbstractToolset.get_tools] that was called.



